# Prairie_prototype

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  Pipfile  README.md  main.py  setup.cfg  setup.py
controller/: controller.py
files/prairies/: airy_psf.yml  chart_test2.yml  lets.yml  series.yml  test.yml  the_long_example.yml
files/scripts/: basic_functions.py  test_functions.py
model/: compiler.py  core.py
prairie/: __init__.py  main.py
prairie/controller/: controller.py
prairie/files/prairies/: chart_test.yml  random_plot.yml  test4.yml  test_2.yml  test_ui.yml
prairie/model/: blocks.py
prairie/resources/configuration/: conf.yml
prairie/resources/lorelei_files/: all_examples.yml  simple_computation_example.yml
prairie/resources/stylesheets/: splitter.txt  tabWidget.txt
prairie/view/: blocks_view.py  chart_view.py  file_system_tree.py  prairie_view.py
resources/: run_button.txt
resources/lorelei_files/: plot_example.yml  psf_example.yml  random_image_example.yml
view/: PrairieViewToolBar.py  __blocks_view.py  file_system_tree.py
