[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
name = prairie
version = attr: prairie.__version__
description = Short description
long_description = file: README.txt
author = Lionel Garcia
author_email = name@provider.com
url = https://github.com/LionelGarcia/Praire
licence = 'BSD'
keywords = hello, world

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    wheel>=0.29
    setuptools>=21.2.1
install_requires =
    importlib_resources ; python_full_version < '3.7'
    pyqt5
    pyqtchart
    pyyaml
    scipy
    matplotlib

[entrypoints]
console_scripts =
    lorelei_cli = prairie.main:main
